# parallel-experiments

./: README.md  makefile  parallel-experiments.cabal
app/: Main.hs
src/: Lib.hs
test/: LibSpec.hs
