name:                parallel-experiments
version:             0.1.0.0
synopsis:            Experiments with Haskell multicore parallelism
description:         Please see README.md
homepage:            https://github.com/ocramz/parallel-experiments
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco@gmail.com
copyright:           2016 Marco Zocca
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , parallel
                     , random >= 1.1
                     -- , time >= 1.6.0.1

executable parallel-experiments
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , hspec
                     , parallel
                     , criterion
                     , parallel-experiments
                     , random >= 1.1
                     , time >= 1.6.0.1

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , base
                     , hspec
                     , parallel
                     , criterion
                     , parallel-experiments
                     , random >= 1.1
                     , time >= 1.6.0.1

source-repository head
  type:     git
  location: https://github.com/ocramz/parallel-experiments
